Fix background color on small screens

--- a/src/css/dark-theme.css
+++ b/src/css/dark-theme.css
@@ -17,7 +17,10 @@ a:hover {
 }
 
 @media all and (max-width: 670px) {
+    html {
+	background-color: #0C0D12;
+    }
     body {
-	background: #00000000;
+	background: #000000ff;
     }
 }
